cmake_minimum_required(VERSION 3.12)
project(roborobo3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(config)
include_directories(data)
include_directories(include)
include_directories(include/contrib)
include_directories(include/contrib/neuralnetworks)
include_directories(include/contrib/SDL2)
include_directories(include/contrib/SDL2_image)
include_directories(include/contrib/zsu)
include_directories(include/core)
include_directories(include/core/Agents)
include_directories(include/core/Config)
include_directories(include/core/Controllers)
include_directories(include/core/Observers)
include_directories(include/core/RoboroboMain)
include_directories(include/core/Utilities)
include_directories(include/core/World)
include_directories(include/core/WorldModels)
include_directories(include/ext)
include_directories(include/ext/Config)
include_directories(include/ext/World)
include_directories(prj/crossover/include)
include_directories(prj/pucks_vanilla/include)
include_directories(prj/TemplateBoids/include)
include_directories(prj/TemplateEE/include)
include_directories(prj/TemplateMedea/include)
include_directories(prj/TemplateRandomwalk/include)
include_directories(prj/TemplateVanillaEE/include)
include_directories(prj/TemplateWander/include)
include_directories(prj/testProject/include)

add_executable(roborobo3
        config/benchmark.properties
        config/crossover.properties
        config/movingobjects.properties
        config/pucks_vanilla.properties
        config/template_boids.properties
        config/template_medea.properties
        config/template_randomwalk.properties
        config/template_vanillaEE.properties
        config/template_wander_bigrobots.properties
        config/template_wander_smallrobots.properties
        config/test.properties
        config/testproject.properties
        data/_png/_README_PNG.txt
        data/_png/default_background.png
        data/_png/default_environment.png
        data/_png/default_footprints.png
        data/_png/default_foreground.png
        data/_png/env_1000_background.png
        data/_png/env_1000_environment.png
        data/_png/env_1000_footprints.png
        data/_png/env_1000_foreground.png
        data/_png/env_1400_background.png
        data/_png/env_1400_environment.png
        data/_png/env_1400_footprints.png
        data/_png/env_1400_foreground.png
        data/_png/env_4000_background.png
        data/_png/env_4000_environment.png
        data/_png/env_4000_footprints.png
        data/_png/env_4000_foreground.png
        data/_png/env_400_background.png
        data/_png/env_400_environment.png
        data/_png/env_400_footprints.png
        data/_png/env_400_foreground.png
        data/_png/env_600_background.png
        data/_png/env_600_environment.png
        data/_png/env_600_footprints.png
        data/_png/env_600_foreground.png
        data/_png/env_circle1000_background.png
        data/_png/env_circle1000_environment.png
        data/_png/env_circle1000_footprints.png
        data/_png/env_circle1000_foreground.png
        data/_png/maxirobot-mask-black.png
        data/_png/maxirobot-mask-edgesOnly.png
        data/_png/maxirobot-mask-old.png
        data/_png/maxirobot-mask-specialMyriam.png
        data/_png/maxirobot-mask.png
        data/_png/maxirobot-specs-round.png
        data/_png/maxirobot-specs.png
        data/_png/minirobot-mask-blue.png
        data/_png/minirobot-mask-edgesOnly.png
        data/_png/minirobot-mask-orange.png
        data/_png/minirobot-mask.png
        data/_png/minirobot-specs-12sensors.png
        data/_png/minirobot-specs-16sensors.png
        data/_png/minirobot-specs-8sensors.png
        data/_templates/agent-full.psd
        data/_templates/maze.psd
        data/_templates/zone.psd
        data/__roborobo2_icon__.bmp
        data/__roborobo2_icon__.jpg
        data/default_background.bmp
        data/default_environment.bmp
        data/default_footprints.bmp
        data/default_foreground.bmp
        data/env_1000_background.bmp
        data/env_1000_environment.bmp
        data/env_1000_footprints.bmp
        data/env_1000_foreground.bmp
        data/env_1400_background.bmp
        data/env_1400_environment.bmp
        data/env_1400_footprints.bmp
        data/env_1400_foreground.bmp
        data/env_4000_background.bmp
        data/env_4000_environment.bmp
        data/env_4000_footprints.bmp
        data/env_4000_foreground.bmp
        data/env_400_background.bmp
        data/env_400_environment.bmp
        data/env_400_footprints.bmp
        data/env_400_foreground.bmp
        data/env_600_background.bmp
        data/env_600_environment.bmp
        data/env_600_footprints.bmp
        data/env_600_foreground.bmp
        data/env_circle1000_background.bmp
        data/env_circle1000_environment.bmp
        data/env_circle1000_footprints.bmp
        data/env_circle1000_foreground.bmp
        data/maxirobot-mask-black.bmp
        data/maxirobot-mask-edgesOnly.bmp
        data/maxirobot-mask-old.bmp
        data/maxirobot-mask-specialMyriam.bmp
        data/maxirobot-mask.bmp
        data/maxirobot-specs-round.bmp
        data/maxirobot-specs.bmp
        data/maze_background.bmp
        data/maze_environment.bmp
        data/maze_footprints.bmp
        data/maze_foreground.bmp
        data/minirobot-mask-blue.bmp
        data/minirobot-mask-edgesOnly.bmp
        data/minirobot-mask-orange.bmp
        data/minirobot-mask.bmp
        data/minirobot-specs-12sensors.bmp
        data/minirobot-specs-16sensors.bmp
        data/minirobot-specs-8sensors.bmp
        include/contrib/neuralnetworks/Elman.h
        include/contrib/neuralnetworks/LayeredNeuralNetwork.h
        include/contrib/neuralnetworks/MLP.h
        include/contrib/neuralnetworks/NeuralNetwork.h
        include/contrib/neuralnetworks/NeuralNetworkException.h
        include/contrib/neuralnetworks/Perceptron.h
        include/contrib/neuralnetworks/ReservoirNeuralNetwork.h
        include/contrib/SDL2/begin_code.h
        include/contrib/SDL2/close_code.h
        include/contrib/SDL2/SDL.h
        include/contrib/SDL2/SDL_assert.h
        include/contrib/SDL2/SDL_atomic.h
        include/contrib/SDL2/SDL_audio.h
        include/contrib/SDL2/SDL_bits.h
        include/contrib/SDL2/SDL_blendmode.h
        include/contrib/SDL2/SDL_clipboard.h
        include/contrib/SDL2/SDL_config.h
        include/contrib/SDL2/SDL_cpuinfo.h
        include/contrib/SDL2/SDL_egl.h
        include/contrib/SDL2/SDL_endian.h
        include/contrib/SDL2/SDL_error.h
        include/contrib/SDL2/SDL_events.h
        include/contrib/SDL2/SDL_filesystem.h
        include/contrib/SDL2/SDL_gamecontroller.h
        include/contrib/SDL2/SDL_gesture.h
        include/contrib/SDL2/SDL_haptic.h
        include/contrib/SDL2/SDL_hints.h
        include/contrib/SDL2/SDL_image.h
        include/contrib/SDL2/SDL_joystick.h
        include/contrib/SDL2/SDL_keyboard.h
        include/contrib/SDL2/SDL_keycode.h
        include/contrib/SDL2/SDL_loadso.h
        include/contrib/SDL2/SDL_log.h
        include/contrib/SDL2/SDL_main.h
        include/contrib/SDL2/SDL_messagebox.h
        include/contrib/SDL2/SDL_mouse.h
        include/contrib/SDL2/SDL_mutex.h
        include/contrib/SDL2/SDL_name.h
        include/contrib/SDL2/SDL_opengl.h
        include/contrib/SDL2/SDL_opengl_glext.h
        include/contrib/SDL2/SDL_opengles.h
        include/contrib/SDL2/SDL_opengles2.h
        include/contrib/SDL2/SDL_opengles2_gl2.h
        include/contrib/SDL2/SDL_opengles2_gl2ext.h
        include/contrib/SDL2/SDL_opengles2_gl2platform.h
        include/contrib/SDL2/SDL_opengles2_khrplatform.h
        include/contrib/SDL2/SDL_pixels.h
        include/contrib/SDL2/SDL_platform.h
        include/contrib/SDL2/SDL_power.h
        include/contrib/SDL2/SDL_quit.h
        include/contrib/SDL2/SDL_rect.h
        include/contrib/SDL2/SDL_render.h
        include/contrib/SDL2/SDL_revision.h
        include/contrib/SDL2/SDL_rwops.h
        include/contrib/SDL2/SDL_scancode.h
        include/contrib/SDL2/SDL_shape.h
        include/contrib/SDL2/SDL_stdinc.h
        include/contrib/SDL2/SDL_surface.h
        include/contrib/SDL2/SDL_system.h
        include/contrib/SDL2/SDL_syswm.h
        include/contrib/SDL2/SDL_test.h
        include/contrib/SDL2/SDL_test_assert.h
        include/contrib/SDL2/SDL_test_common.h
        include/contrib/SDL2/SDL_test_compare.h
        include/contrib/SDL2/SDL_test_crc32.h
        include/contrib/SDL2/SDL_test_font.h
        include/contrib/SDL2/SDL_test_fuzzer.h
        include/contrib/SDL2/SDL_test_harness.h
        include/contrib/SDL2/SDL_test_images.h
        include/contrib/SDL2/SDL_test_log.h
        include/contrib/SDL2/SDL_test_md5.h
        include/contrib/SDL2/SDL_test_memory.h
        include/contrib/SDL2/SDL_test_random.h
        include/contrib/SDL2/SDL_thread.h
        include/contrib/SDL2/SDL_timer.h
        include/contrib/SDL2/SDL_touch.h
        include/contrib/SDL2/SDL_types.h
        include/contrib/SDL2/SDL_version.h
        include/contrib/SDL2/SDL_video.h
        include/contrib/SDL2/SDL_vulkan.h
        include/contrib/SDL2_image/begin_code.h
        include/contrib/SDL2_image/close_code.h
        include/contrib/SDL2_image/SDL.h
        include/contrib/SDL2_image/SDL_assert.h
        include/contrib/SDL2_image/SDL_atomic.h
        include/contrib/SDL2_image/SDL_audio.h
        include/contrib/SDL2_image/SDL_bits.h
        include/contrib/SDL2_image/SDL_blendmode.h
        include/contrib/SDL2_image/SDL_clipboard.h
        include/contrib/SDL2_image/SDL_config.h
        include/contrib/SDL2_image/SDL_cpuinfo.h
        include/contrib/SDL2_image/SDL_egl.h
        include/contrib/SDL2_image/SDL_endian.h
        include/contrib/SDL2_image/SDL_error.h
        include/contrib/SDL2_image/SDL_events.h
        include/contrib/SDL2_image/SDL_filesystem.h
        include/contrib/SDL2_image/SDL_gamecontroller.h
        include/contrib/SDL2_image/SDL_gesture.h
        include/contrib/SDL2_image/SDL_haptic.h
        include/contrib/SDL2_image/SDL_hints.h
        include/contrib/SDL2_image/SDL_image.h
        include/contrib/SDL2_image/SDL_joystick.h
        include/contrib/SDL2_image/SDL_keyboard.h
        include/contrib/SDL2_image/SDL_keycode.h
        include/contrib/SDL2_image/SDL_loadso.h
        include/contrib/SDL2_image/SDL_log.h
        include/contrib/SDL2_image/SDL_main.h
        include/contrib/SDL2_image/SDL_messagebox.h
        include/contrib/SDL2_image/SDL_mouse.h
        include/contrib/SDL2_image/SDL_mutex.h
        include/contrib/SDL2_image/SDL_name.h
        include/contrib/SDL2_image/SDL_opengl.h
        include/contrib/SDL2_image/SDL_opengl_glext.h
        include/contrib/SDL2_image/SDL_opengles.h
        include/contrib/SDL2_image/SDL_opengles2.h
        include/contrib/SDL2_image/SDL_opengles2_gl2.h
        include/contrib/SDL2_image/SDL_opengles2_gl2ext.h
        include/contrib/SDL2_image/SDL_opengles2_gl2platform.h
        include/contrib/SDL2_image/SDL_opengles2_khrplatform.h
        include/contrib/SDL2_image/SDL_pixels.h
        include/contrib/SDL2_image/SDL_platform.h
        include/contrib/SDL2_image/SDL_power.h
        include/contrib/SDL2_image/SDL_quit.h
        include/contrib/SDL2_image/SDL_rect.h
        include/contrib/SDL2_image/SDL_render.h
        include/contrib/SDL2_image/SDL_revision.h
        include/contrib/SDL2_image/SDL_rwops.h
        include/contrib/SDL2_image/SDL_scancode.h
        include/contrib/SDL2_image/SDL_shape.h
        include/contrib/SDL2_image/SDL_stdinc.h
        include/contrib/SDL2_image/SDL_surface.h
        include/contrib/SDL2_image/SDL_system.h
        include/contrib/SDL2_image/SDL_syswm.h
        include/contrib/SDL2_image/SDL_test.h
        include/contrib/SDL2_image/SDL_test_assert.h
        include/contrib/SDL2_image/SDL_test_common.h
        include/contrib/SDL2_image/SDL_test_compare.h
        include/contrib/SDL2_image/SDL_test_crc32.h
        include/contrib/SDL2_image/SDL_test_font.h
        include/contrib/SDL2_image/SDL_test_fuzzer.h
        include/contrib/SDL2_image/SDL_test_harness.h
        include/contrib/SDL2_image/SDL_test_images.h
        include/contrib/SDL2_image/SDL_test_log.h
        include/contrib/SDL2_image/SDL_test_md5.h
        include/contrib/SDL2_image/SDL_test_memory.h
        include/contrib/SDL2_image/SDL_test_random.h
        include/contrib/SDL2_image/SDL_thread.h
        include/contrib/SDL2_image/SDL_timer.h
        include/contrib/SDL2_image/SDL_touch.h
        include/contrib/SDL2_image/SDL_types.h
        include/contrib/SDL2_image/SDL_version.h
        include/contrib/SDL2_image/SDL_video.h
        include/contrib/SDL2_image/SDL_vulkan.h
        include/contrib/zsu/func.h
        include/contrib/zsu/Properties.h
        include/contrib/zsu/StringUtils.h
        include/contrib/zsu/strip.h
        include/core/Agents/Agent.h
        include/core/Agents/InspectorAgent.h
        include/core/Agents/Robot.h
        include/core/Config/GlobalConfigurationLoader.h
        include/core/Controllers/Controller.h
        include/core/Observers/AgentObserver.h
        include/core/Observers/Observer.h
        include/core/Observers/WorldObserver.h
        include/core/RoboroboMain/common.h
        include/core/RoboroboMain/main.h
        include/core/RoboroboMain/roborobo.h
        include/core/Utilities/ExtendedProperties.h
        include/core/Utilities/Geometry.h
        include/core/Utilities/Graphics.h
        include/core/Utilities/LogManager.h
        include/core/Utilities/Misc.h
        include/core/Utilities/SDLMain.h
        include/core/Utilities/Timer.h
        include/core/World/CircleObject.h
        include/core/World/PhysicalObject.h
        include/core/World/SquareObject.h
        include/core/World/World.h
        include/core/WorldModels/RobotWorldModel.h
        include/core/WorldModels/WorldModel.h
        include/ext/Config/ConfigurationLoader.h
        include/ext/Config/crossoverConfigurationLoader.h
        include/ext/Config/pucks_vanillaConfigurationLoader.h
        include/ext/Config/TemplateBoidsConfigurationLoader.h
        include/ext/Config/TemplateEEConfigurationLoader.h
        include/ext/Config/TemplateMedeaConfigurationLoader.h
        include/ext/Config/TemplateRandomwalkConfigurationLoader.h
        include/ext/Config/TemplateVanillaEEConfigurationLoader.h
        include/ext/Config/TemplateWanderConfigurationLoader.h
        include/ext/Config/testProjectConfigurationLoader.h
        include/ext/World/EnergyItem.h
        include/ext/World/GateObject.h
        include/ext/World/LandmarkObject.h
        include/ext/World/MovableObject.h
        include/ext/World/PhysicalObjectFactory.h
        include/ext/World/RoundObject.h
        include/ext/World/SwitchObject.h
        prj/crossover/include/crossoverAgentObserver.h
        prj/crossover/include/crossoverController.h
        prj/crossover/include/crossoverSharedData.h
        prj/crossover/include/crossoverWorldObserver.h
        prj/crossover/src/crossoverAgentObserver.cpp
        prj/crossover/src/crossoverController.cpp
        prj/crossover/src/crossoverSharedData.cpp
        prj/crossover/src/crossoverWorldObserver.cpp
        prj/pucks_vanilla/include/pucks_vanillaAgentObserver.h
        prj/pucks_vanilla/include/pucks_vanillaController.h
        prj/pucks_vanilla/include/pucks_vanillaSharedData.h
        prj/pucks_vanilla/include/pucks_vanillaWorldObserver.h
        prj/pucks_vanilla/src/pucks_vanillaAgentObserver.cpp
        prj/pucks_vanilla/src/pucks_vanillaController.cpp
        prj/pucks_vanilla/src/pucks_vanillaSharedData.cpp
        prj/pucks_vanilla/src/pucks_vanillaWorldObserver.cpp
        prj/TemplateBoids/include/TemplateBoidsAgentObserver.h
        prj/TemplateBoids/include/TemplateBoidsController.h
        prj/TemplateBoids/include/TemplateBoidsSharedData.h
        prj/TemplateBoids/include/TemplateBoidsWorldObserver.h
        prj/TemplateBoids/src/TemplateBoidsAgentObserver.cpp
        prj/TemplateBoids/src/TemplateBoidsController.cpp
        prj/TemplateBoids/src/TemplateBoidsSharedData.cpp
        prj/TemplateBoids/src/TemplateBoidsWorldObserver.cpp
        prj/TemplateEE/include/TemplateEEAgentObserver.h
        prj/TemplateEE/include/TemplateEEController.h
        prj/TemplateEE/include/TemplateEESharedData.h
        prj/TemplateEE/include/TemplateEEWorldObserver.h
        prj/TemplateEE/src/TemplateEEAgentObserver.cpp
        prj/TemplateEE/src/TemplateEEController.cpp
        prj/TemplateEE/src/TemplateEESharedData.cpp
        prj/TemplateEE/src/TemplateEEWorldObserver.cpp
        prj/TemplateMedea/include/TemplateMedeaAgentObserver.h
        prj/TemplateMedea/include/TemplateMedeaController.h
        prj/TemplateMedea/include/TemplateMedeaSharedData.h
        prj/TemplateMedea/include/TemplateMedeaWorldObserver.h
        prj/TemplateMedea/src/TemplateMedeaAgentObserver.cpp
        prj/TemplateMedea/src/TemplateMedeaController.cpp
        prj/TemplateMedea/src/TemplateMedeaSharedData.cpp
        prj/TemplateMedea/src/TemplateMedeaWorldObserver.cpp
        prj/TemplateRandomwalk/include/TemplateRandomwalkAgentObserver.h
        prj/TemplateRandomwalk/include/TemplateRandomwalkController.h
        prj/TemplateRandomwalk/include/TemplateRandomwalkWorldObserver.h
        prj/TemplateRandomwalk/src/TemplateRandomwalkAgentObserver.cpp
        prj/TemplateRandomwalk/src/TemplateRandomwalkController.cpp
        prj/TemplateRandomwalk/src/TemplateRandomwalkWorldObserver.cpp
        prj/TemplateVanillaEE/include/TemplateVanillaEEAgentObserver.h
        prj/TemplateVanillaEE/include/TemplateVanillaEEController.h
        prj/TemplateVanillaEE/include/TemplateVanillaEESharedData.h
        prj/TemplateVanillaEE/include/TemplateVanillaEEWorldObserver.h
        prj/TemplateVanillaEE/src/TemplateVanillaEEAgentObserver.cpp
        prj/TemplateVanillaEE/src/TemplateVanillaEEController.cpp
        prj/TemplateVanillaEE/src/TemplateVanillaEESharedData.cpp
        prj/TemplateVanillaEE/src/TemplateVanillaEEWorldObserver.cpp
        prj/TemplateWander/include/TemplateWanderAgentObserver.h
        prj/TemplateWander/include/TemplateWanderController.h
        prj/TemplateWander/include/TemplateWanderWorldObserver.h
        prj/TemplateWander/src/TemplateWanderAgentObserver.cpp
        prj/TemplateWander/src/TemplateWanderController.cpp
        prj/TemplateWander/src/TemplateWanderWorldObserver.cpp
        prj/testProject/include/testProjectAgentObserver.h
        prj/testProject/include/testProjectController.h
        prj/testProject/include/testProjectWorldObserver.h
        prj/testProject/src/testProjectAgentObserver.cpp
        prj/testProject/src/testProjectController.cpp
        prj/testProject/src/testProjectWorldObserver.cpp
        src/contrib/neuralnetworks/Elman.cpp
        src/contrib/neuralnetworks/LayeredNeuralNetwork.cpp
        src/contrib/neuralnetworks/MLP.cpp
        src/contrib/neuralnetworks/NeuralNetwork.cpp
        src/contrib/neuralnetworks/NeuralNetworkException.cpp
        src/contrib/neuralnetworks/Perceptron.cpp
        src/contrib/neuralnetworks/ReservoirNeuralNetwork.cpp
        src/contrib/zsu/Properties.cpp
        src/contrib/zsu/StringUtils.cpp
        src/core/Agent.cpp
        src/core/AgentObserver.cpp
        src/core/CircleObject.cpp
        src/core/Controller.cpp
        src/core/ExtendedProperties.cpp
        src/core/Geometry.cpp
        src/core/Graphics.cpp
        src/core/InspectorAgent.cpp
        src/core/LogManager.cpp
        src/core/main.cpp
        src/core/Misc.cpp
        src/core/Observer.cpp
        src/core/PhysicalObject.cpp
        src/core/roborobo.cpp
        src/core/Robot.cpp
        src/core/RobotWorldModel.cpp
        src/core/SquareObject.cpp
        src/core/Timer.cpp
        src/core/World.cpp
        src/core/WorldModel.cpp
        src/core/WorldObserver.cpp
        src/ext/ConfigurationLoader.cpp
        src/ext/crossoverConfigurationLoader.cpp
        src/ext/EnergyItem.cpp
        src/ext/GateObject.cpp
        src/ext/LandmarkObject.cpp
        src/ext/MovableObject.cpp
        src/ext/PhysicalObjectFactory.cpp
        src/ext/pucks_vanillaConfigurationLoader.cpp
        src/ext/RoundObject.cpp
        src/ext/SwitchObject.cpp
        src/ext/TemplateBoidsConfigurationLoader.cpp
        src/ext/TemplateEEConfigurationLoader.cpp
        src/ext/TemplateMedeaConfigurationLoader.cpp
        src/ext/TemplateRandomwalkConfigurationLoader.cpp
        src/ext/TemplateVanillaEEConfigurationLoader.cpp
        src/ext/TemplateWanderConfigurationLoader.cpp
        src/ext/testProjectConfigurationLoader.cpp
        tools/misc/gaussianBenchmarks.cpp
        tools/misc/random.cpp
        tools/misc/randomBenchmarks.cpp
        tools/scripts/clean-logs.sh
        tools/scripts/eye.sh
        tools/scripts/howto_scripts.txt
        tools/scripts/multiplot.py
        tools/scripts/mylib.py
        tools/scripts/store.sh)
